Fix Image Stretching Issue

--- a/styles.css
+++ b/styles.css
@@ -39,12 +39,14 @@ body{
     gap: 10px;
 }
 .firstRight {
+    align-items: center;
     width: 400px;
     display: flex;
 }
 
 img {
-    width: 100%;
+    width: 400px;
+    height: auto;
 }
 
 .heroText {
